--- a/demo.html
+++ b/demo.html
@@ -42,16 +42,19 @@
         <px-slider value="150" min="0" max="500" step="50">
       </div>
 
+    <div style="width: 200px">
+
       <h4>Demonstrate px-slider bugs</h4>
       <template id="my-slider" is="dom-bind">
 
         <slider-container range-values="{{rangeValues}}">
         </slider-container>
+        <br>
 
         <slider-container range-values="{{infiniteLoopRangeValues}}">
         </slider-container>
 
-        <!--
+        <!-- this part is fine
         <px-slider id="slider1"
           start-value="10"
           end-value="40"
@@ -66,6 +69,7 @@
         </px-slider>
         -->
       </template>
+    </div>
       <script>
         var tmpl = document.querySelector('#my-slider');
         var slider1 = document.querySelector('#slider1')
