--- a/demo.html
+++ b/demo.html
@@ -28,11 +28,13 @@
     <p>
       All input values are validated and updated according to the constraints (e.g. min, max, step-size).
     </p>
+
     <p>
       Also see the <a href="index.html">documentation</a> and the <a href="test/fixture.html">UI test fixture</a>.
     </p>
+    <br />
     <h4>Single Value</h4>
-    <div style="width: 200px">
+    <div style="width: 600px;">
       <px-slider value="50" min="0" max="100">
       </px-slider>
       <h4>Single Value, Greater Precision.  (Step set to 0.001)</h4>
@@ -42,16 +44,16 @@
       <px-slider value="5.44" min="0" max="100" step="0.04">
       </px-slider>
       <h4>Range</h4>
-      <div style="width: 400px">
+      <div style="width: 600px;">
         <px-slider start-value="20" end-value="40" min="0" max="60">
         </px-slider>
       </div>
       <h4>Step = 50</h4>
-      <div style="width: 400px">
+      <div style="width: 600px;">
         <px-slider value="150" min="0" max="500" step="50">
       </div>
 
-    <div style="width: 200px">
+    <div style="width: 600px; margin-bottom: 50px;">
 
       <h4>Demonstrate px-slider bugs</h4>
       <template id="my-slider" is="dom-bind">
