adding tab functionality to start and end input boxes

--- a/px-handle.html
+++ b/px-handle.html
@@ -22,7 +22,7 @@ Element providing solution to no problem in particular. As a simple, increments 
 <dom-module id="px-handle">
   <link rel="import" type="css" href="css/px-handle.css" />
   <template>
-    <button id="handleTarget" on-down="handleDown" on-up="handleUp" on-track="handleTrack">
+    <button id="handleTarget" on-down="handleDown" on-up="handleUp" on-track="handleTrack"  tabindex="-1">
       <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20">
         <rect x="0" y="3" width="1" height="7" />
         <rect x="3" y="3" width="1" height="7" />
