fixed a rounding bug with step change slider, added debounce in various places for safety, added documentation

--- a/px-handle-multi.html
+++ b/px-handle-multi.html
@@ -8,14 +8,14 @@
 
 
 <!--
-Element providing solution to no problem in particular. As a simple, increments a counter when clicked.
-
+Handle Element expected to be used in px-slider
 ##### Usage
 
-    <px-slider counter-value="1">Hi</px-slider>
+<px-handle-multi id="myID" class="visuallyHidden" handle-track-event-name="handleTrackStart" on-track="handleTrackStart" handle-rotate></px-handle-multi>
+
 
 @element px-slider
-@blurb Element providing solution to no problem in particular.
+@blurb Handle Element expected to be used in px-slider
 @homepage index.html
 @demo demo.html
 -->
@@ -43,7 +43,7 @@ Element providing solution to no problem in particular. As a simple, increments 
     properties: {
       /**
        *
-       *
+       * Name of the event that will be raised when the handle DOWN and dragged.
        *
        */
       tracking: {
@@ -94,27 +94,42 @@ Element providing solution to no problem in particular. As a simple, increments 
         observer: '_rotateHandle'
       }
     },
-
+    /**
+     * When the handle is clicked on for a drag, adds class for style
+     *
+     */
     _trackingChanged: function(newValue, oldValue) {
       this.toggleClass('tracking', newValue, this.$.handleTarget);
     },
-
+    /**
+     * When the handle is clicked on, fire event
+     *
+     */
     handleDown: function(event) {
       this._setTracking(true);
       this.fire(this.handleDownEventName);
     },
-
+    /**
+     * When the handle is let go (after being clicked on), fire event
+     *
+     */
     handleUp: function(event) {
       this._setTracking(false);
       this.fire(this.handleUpEventName);
     },
-
+    /**
+     * When the handle is moving, fire event
+     *
+     */
     handleTrack: function(event) {
       if (this.tracking) {
         this.fire(this.handleTrackEventName);
       }
     },
-
+    /**
+     * Sets styles on handle when we know if it is a start or end handle
+     *
+     */
     _rotateHandle: function(bool){
       this.toggleClass('start', bool, this.$.multiHandleSVG);
       this.toggleClass('start', bool);
