--- a/px-slider.html
+++ b/px-slider.html
@@ -28,11 +28,11 @@ Allow the user to select a value or range of values within a specified min and m
       <input id="inputStart" type="text" class="text-input" value="{{value}}" on-change="handleStartChange"  tabindex="0"/>
       <div id="sliderContainer" class="slider flex__item" on-click="jumpToValue">
         <div id="sliderSelected" class="slider__selected"></div>
-        <px-handle-multi id="startHandle" style="visibility:hidden;" handle-track-event-name="handleTrackStart" on-track="handleTrackStart" handle-rotate></px-handle-multi>
-        <px-handle-multi id="endHandle" style="visibility:hidden;" handle-track-event-name="handleTrackEnd" on-track="handleTrackEnd"></px-handle-multi>
-        <px-handle id="singleHandle" style="visibility:hidden;" handle-track-event-name="handleTrackEnd" on-track="handleTrackEnd"></px-handle>
+        <px-handle-multi id="startHandle" class="visuallyhidden" handle-track-event-name="handleTrackStart" on-track="handleTrackStart" handle-rotate></px-handle-multi>
+        <px-handle-multi id="endHandle" class="visuallyhidden" handle-track-event-name="handleTrackEnd" on-track="handleTrackEnd"></px-handle-multi>
+        <px-handle id="singleHandle" class="visuallyhidden" handle-track-event-name="handleTrackEnd" on-track="handleTrackEnd"></px-handle>
       </div>
-      <input id="inputEnd" type="text" style="visibility:hidden;" class="text-input" value="{{endValue}}" on-change="handleEndChange" tabindex="0"/>
+      <input id="inputEnd" type="text" class="text-input visuallyhidden" value="{{endValue}}" on-change="handleEndChange" tabindex="0"/>
     </div>
   </template>
 </dom-module>
@@ -60,9 +60,11 @@ Allow the user to select a value or range of values within a specified min and m
         this.value = this.startValue;
 
         // Show the start handle and the end input and end handle
-        this.$.startHandle.style.visibility = 'visible';
-        this.$.inputEnd.style.visibility = 'visible';
-        this.$.endHandle.style.visibility = 'visible';
+        this.toggleClass('visuallyhidden',false,this.$.startHandle);
+        this.toggleClass('visuallyhidden',false,this.$.endHandle);
+        this.toggleClass('visuallyhidden',false,this.$.inputEnd);
+
+        // add class to make style adjustments specific to the multi handle version
         this.toggleClass('slider__multi',true,this.$.sliderContainer);
 
         // Let's do some extra error checking to protect developers from themselves
@@ -76,8 +78,6 @@ Allow the user to select a value or range of values within a specified min and m
           console.warn("Your end value doesn't match your step: the end value needs to be evenly divisible by the step attribute.");
         }
 
-
-
         // Cleanup values, just in case
         this.value = this._cleanValue(this.value);
         this.endValue = this._cleanValue(this.endValue);
@@ -85,8 +85,10 @@ Allow the user to select a value or range of values within a specified min and m
         // Have to wait for the DOM to finish loading
         // And then refire these
         this.async(function() {
-          // calculate the amount to offset the range on the right for handle width
+          // calc the amount to offset the range on the right to account for handle width
           this.offsetForHandleWidth = this._calcOffsetWidth(2);
+
+          // move handles into starting position
           this._updateHandle(this.$.startHandle, this.value);
           this._updateHandle(this.$.endHandle, this.endValue);
         }, 1);
@@ -97,11 +99,13 @@ Allow the user to select a value or range of values within a specified min and m
         }
 
         // Show the single handle
-        this.$.singleHandle.style.visibility = 'visible';
+        this.$.singleHandle.toggleClass('visuallyhidden',false);
 
         this.async(function() {
           // calculate the amount to offset the range on the right for handle width
           this.offsetForHandleWidth = this._calcOffsetWidth(22);
+
+          // move handle into initial position
           this._updateHandle(this.$.singleHandle, this.value);
         }, 1);
       }
@@ -119,36 +123,53 @@ Allow the user to select a value or range of values within a specified min and m
         value: false,
         readOnly: true
       },
+      /**
+       * Value of the slider
+       */
       value: {
         type: Number,
         reflect: true,
         notify: true,
         observer: '_valueChanged'
       },
+      /**
+       * For multi-sliders, the lower value of the range
+       */
       startValue: {
         type: Number,
         reflect: true,
-        notify: true,
-        observer: '_startValueChanged'
+        notify: true
       },
+      /**
+       * For multi-sliders, the upper value of the range
+       */
       endValue: {
         type: Number,
         reflect: true,
         notify: true,
         observer: '_endValueChanged'
       },
+      /**
+       * A min value for the slider. The user cannot choose less than the min
+       */
       min: {
         type: Number,
         value: 1,
         reflect: true,
         observer: '_minChanged'
       },
+      /**
+       * A max value for the slider. The user cannot choose greater than the max
+       */
       max: {
         type: Number,
         value: 100,
         reflect: true,
         observer: '_maxChanged'
       },
+      /**
+       * Sets the step size that can be choosen
+       */
       step: {
         type: Number,
         value: 1,
@@ -161,11 +182,18 @@ Allow the user to select a value or range of values within a specified min and m
         reflect: true
       }
     },
+    /**
+     * As an overview, there are functions for:
+     * -when the value of the slider changes (which then moves the handle)
+     * -when the handle is moved (which then changes the value)
+     * -when the initial attributes on px-slider are changed
+     * -helper functions to calc stuff for all cases
+     */
 
     /**
-     * Watchers (creepy)
-     *
-     * Not working, though ...
+     * Function called when a value changes
+     * --Ensures the value is valid, matches step size, etc
+     * --Moves single or start handle into position
      *
      */
     _valueChanged: function(newValue, oldValue) {
@@ -192,28 +220,40 @@ Allow the user to select a value or range of values within a specified min and m
         }
 
     },
-
-    _startValueChanged: function(newValue, oldValue) {
-      // This is just really here in case a dev changes this value programmatically
-      //this.value = newValue; // Should call value watcher for cleanup
-    },
-
+    /**
+     * Similar to _valueChanged but affects end handle:
+     * --Ensures the value is valid, matches step size, etc
+     * --Moves single or end handle into position
+     *
+     */
     _endValueChanged: function(newValue, oldValue) {
-      var clean = this._cleanValue(newValue);
+      var slider = this;
+      //this is here to ensure that when we get many consecutive jumps, we debounce them, instead of calculating each one.
+      if (slider.debounce) {
+        slider.debounce(
+          'slider_move_end', function() {
+            var clean = this._cleanValue(newValue);
 
-      // If this is a range, don't go below the start value
-      if (this.range && clean < this.value) {
-        clean = this.value;
-      }
+            // If this is a range, don't go below the start value
+            if (this.range && clean < this.value) {
+              clean = this.value;
+            }
 
-      // If it's a range, we update the end handle; otherwise update the single handle
-      var handle = (this.range) ? this.$.endHandle : this.$.singleHandle;
-      this._updateHandle(handle, clean);
+            // If it's a range, we update the end handle; otherwise update the single handle
+            var handle = (this.range) ? this.$.endHandle : this.$.singleHandle;
+            this._updateHandle(handle, clean);
 
-      // Update endValue with the cleaned value
-      this.endValue = clean;
+            // Update endValue with the cleaned value
+            this.endValue = clean;
+          }, 1);
+        }
     },
-
+    /**
+     * Function that is called if the min attribute on px-slider is changed
+     * --Ensures the value is valid, matches step size, etc
+     *
+     *
+     */
     _minChanged: function(newValue, oldValue) {
       // Step not always defined at load?
       if (!this.step) {
@@ -230,7 +270,12 @@ Allow the user to select a value or range of values within a specified min and m
       // Since we are changing the min, let's go ahead and recheck the start value
       this.value = this._cleanValue(this.value);
     },
-
+    /**
+     * Function that is called if the max attr on px-slider is changed
+     * --Ensures the value is valid, matches step size, etc
+     *
+     *
+     */
     _maxChanged: function(newValue, oldValue) {
       // Step not always defined at load?
       if (!this.step) {
@@ -251,7 +296,12 @@ Allow the user to select a value or range of values within a specified min and m
         this.value = this._cleanValue(this.value);
       }
     },
-
+    /**
+     * Function that is called if the step size attr on px-slider is changed
+     * --Ensures the value is valid, matches step size, etc
+     *
+     *
+     */
     _stepChanged: function(newValue, oldValue) {
       // When the step changes, recheck EVERYTHING!
       this.value = this._checkStep(this.value);
@@ -261,7 +311,12 @@ Allow the user to select a value or range of values within a specified min and m
         this.endValue = this._checkStep(this.endValue);
       }
     },
-
+    /**
+     * Helper function that calls checkStep and makes sure the new value
+     * is within bounds.
+     * - Sets to max or min if not.
+     *
+     */
     _cleanValue: function(dirty) {
       var clean = dirty;
 
@@ -277,7 +332,12 @@ Allow the user to select a value or range of values within a specified min and m
 
       return clean;
     },
-
+    /**
+     * Helper function that makes sure the new value matches the
+     * specified step size.
+     *  - Rounds value if not
+     *  - Also sets val to number of decimal places as step size
+     */
     _checkStep: function(dirty) {
       // Bad values on start
       if (!dirty && dirty !== 0) {
@@ -285,29 +345,25 @@ Allow the user to select a value or range of values within a specified min and m
       }
 
       var clean = dirty;
+      var decimalPlaces = 0;
 
-      // Does the value match our step size?
-      // Round down by default (we add back later)
-      var stepchange = dirty % this.step;
-      clean -= stepchange;
+      clean = (Math.round(dirty/this.step) * this.step);
 
-      // If we are more than half way to the next step, add the step.
-      if (stepchange > (this.step / 2)) {
-        clean += this.step;
+      if(this.step.toString().indexOf(".") > -1) {
+        decimalPlaces = this.step.toString().split(".")[1].length;
+        clean = clean.toFixed(decimalPlaces);
       }
 
-      // If decimal is involved, deal with floating point precision
-      if(clean.toString().indexOf(".") > -1) {
-        clean.toFixed(clean.toString().split(".")[1].length);
-      }
       return clean;
     },
+    /**
+     * Helper func to calc the "left:Xpx" style used to moving the handle and progress bar
+     * - Progress bar for multi-handle needs add a bit to make minor alignment adjustments.
+     */
+    _translateValueToPosition: function(myvalue,extra) {
+      // if extra was passed in, use it, otherwise it is 0.
+      extra = extra || 0;
 
-    _translateValueToPosition: function(myvalue) {
-      return  this._translateValueToPositionRaw(myvalue) + 'px';
-    },
-
-    _translateValueToPositionRaw: function(myvalue){
       // add offset so end handle stops at end of tracking
       var cW = this.offsetForHandleWidth;
 
@@ -317,9 +373,14 @@ Allow the user to select a value or range of values within a specified min and m
       // Multiple by the width of the container
       var position = ratio * cW;
 
-      return position
+      return position + extra + 'px'
     },
-
+    /**
+     * Helper function to calc a value from a handle position
+     *
+     *
+     *
+     */
     _translatePositionToValue: function(mypos) {
       // add offset so end handle stops at end of tracking
       var cW = this.offsetForHandleWidth;
@@ -337,7 +398,12 @@ Allow the user to select a value or range of values within a specified min and m
 
       return this._cleanValue(value);
     },
-
+    /**
+     * Function updates the position of a handle by setting it's left style
+     * - calls function to update progress bar
+     *
+     *
+     */
     _updateHandle: function(handle, value) {
       // Determine new x position form value
       var newPos = this._translateValueToPosition(value);
@@ -368,8 +434,8 @@ Allow the user to select a value or range of values within a specified min and m
         var progressPosition = this.value;
 
         // Set the width and the position (for ranges)
-        this.$.sliderSelected.style.width = this._translateValueToPositionRaw(progressValue)+2+'px';
-        this.$.sliderSelected.style.left = this._translateValueToPositionRaw(progressPosition)-1+'px';
+        this.$.sliderSelected.style.width = this._translateValueToPosition(progressValue,2);
+        this.$.sliderSelected.style.left = this._translateValueToPosition(progressPosition,-1);
       } else {
         var progressValue = this.value;
         var progressPosition = 0;
@@ -422,16 +488,24 @@ Allow the user to select a value or range of values within a specified min and m
      * @method handleTrackStart
      */
     handleTrackStart: function(event) {
-      var newPos = this._findPosition(event);
+      var slider = this;
 
-      // Update the value for the new position
-      var newValue = this._translatePositionToValue(newPos);
+      if (slider.debounce) {
+        slider.debounce(
+          'slider_track_end', function() {
+            var newPos = this._findPosition(event);
 
-      // We know this is range
-      if (newValue > this.endValue) {
-        newValue = this.endValue;
+            // Update the value for the new position
+            var newValue = this._translatePositionToValue(newPos);
+
+            // We know this is range
+            if (newValue > this.endValue) {
+              newValue = this.endValue;
+            }
+            this.value = newValue;
+          }, 1
+        );
       }
-      this.value = newValue;
     },
 
     /**
@@ -440,17 +514,24 @@ Allow the user to select a value or range of values within a specified min and m
      * @method handleEndChange
      */
     handleTrackEnd: function(event) {
-      var newPos = this._findPosition(event);
+      var slider = this;
 
-      // Update the value based on the new position
-      var newValue = this._translatePositionToValue(newPos);
-      if (this.range) {
-        if (newValue < this.value) {
-          newValue = this.value;
-        }
-        this.endValue = newValue;
-      } else {
-        this.value = newValue;
+      if (slider.debounce) {
+        slider.debounce(
+          'slider_track_end', function() {
+            var newPos = this._findPosition(event);
+
+            // Update the value based on the new position
+            var newValue = this._translatePositionToValue(newPos);
+            if (this.range) {
+              if (newValue < this.value) {
+                newValue = this.value;
+              }
+              this.endValue = newValue;
+            } else {
+              this.value = newValue;
+            }
+          }, 1 );
       }
     },
 
@@ -508,7 +589,12 @@ Allow the user to select a value or range of values within a specified min and m
         );
       }
     },
-
+    /**
+     * Helper function to calculate the amount of space tha is left on the slider
+     * to accomodate the handle width.
+     *
+     *
+     */
     _calcOffsetWidth: function(cO){
       return this.$.sliderContainer.offsetWidth - cO;
     }
