--- a/px-handle-multi.html
+++ b/px-handle-multi.html
@@ -22,6 +22,10 @@ Handle Element expected to be used in px-slider
 <dom-module id="px-handle-multi">
   <link rel="import" type="css" href="css/px-handle.css" />
   <template>
+    <!-- <div id="multiHandleSVG">
+      <span id="handleTarget">
+      </span>
+    </div> -->
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 23 21" id="multiHandleSVG">
       <g id="handleTarget" on-down="handleDown" on-up="handleUp" on-track="handleTrack" tabindex="-1">
         <path id="handleDropShadow" d="M0.76,12.26V4.67a3,3,0,0,1,3-3h15a3,3,0,0,1,3,3v7.59l-10,8.41h-1Z"/>
@@ -30,7 +34,7 @@ Handle Element expected to be used in px-slider
         <line class="handleLines" x1="8.09" y1="11" x2="8.09" y2="4"/>
         <line class="handleLines" x1="11.09" y1="11" x2="11.09" y2="4"/>
       </g>
-    </span>
+    </svg>
   </template>
 </dom-module>
 
@@ -99,7 +103,11 @@ Handle Element expected to be used in px-slider
      *
      */
     _trackingChanged: function(newValue, oldValue) {
-      this.toggleClass('tracking', newValue, this.$.handleTarget);
+      // toggleClass uses classlist which does not work with SVG on IE
+      // this.toggleClass('tracking', newValue, this.$.handleTarget);
+      // So do it the old fashioned way...
+      console.log(newValue)
+      this._setClassOnSVG(this.$.handleTarget,newValue,'tracking');
     },
     /**
      * When the handle is clicked on, fire event
@@ -131,11 +139,35 @@ Handle Element expected to be used in px-slider
      *
      */
     _rotateHandle: function(bool){
-      this.toggleClass('start', bool, this.$.multiHandleSVG);
+      // toggleClass uses classlist which does not work with SVG on IE
+      // this.toggleClass('start', bool, this.$.multiHandleSVG);
+      // So do it the old fashioned way...
+
+      this._setClassOnSVG(this.$.multiHandleSVG,bool,'start');
+
       this.toggleClass('start', bool);
       this.toggleClass('end', !bool);
       if(bool){
         this.$.handleDropShadow.setAttribute('transform',"translate(0 -2)");
+      }
+    },
+    /**
+     * Sets the classes on SVG elems
+     * toggleClass uses classlist which does not work with SVG on IE
+     */
+    _setClassOnSVG: function(elem,bool,classname){
+      var existingClass = elem.getAttribute('class');
+
+      if(bool){
+        var allClasses = existingClass + ' ' + classname;
+        elem.setAttribute('class',allClasses);
+      } else {
+        var classArr = existingClass.split(' ');
+        var i = classArr.indexOf(classname);
+
+        if(i != -1) { classArr.splice(i, 1); }
+
+        elem.setAttribute('class',classArr.join(' '));
       }
     }
   });
