--- a/px-slider.html
+++ b/px-slider.html
@@ -90,6 +90,8 @@ Allow the user to select a value or range of values within a specified min and m
         // Have to wait for the DOM to finish loading
         // And then refire these
         this.async(function() {
+          // calculate the amount to offset the range on the right for handle width
+          this.offsetForHandleWidth = this._calcOffsetWidth(2);
 
           // move handles into starting position
           this._updateHandle(this.$.startHandle, this.value);
@@ -105,6 +107,8 @@ Allow the user to select a value or range of values within a specified min and m
         this.toggleClass('visuallyhidden', false,  this.$.singleHandle);
 
         this.async(function() {
+          // calculate the amount to offset the range on the right for handle width
+          this.offsetForHandleWidth = this._calcOffsetWidth(22);
 
           // move handle into initial position
           this._updateHandle(this.$.singleHandle, this.value);
@@ -193,12 +197,14 @@ Allow the user to select a value or range of values within a specified min and m
      * when they know the slider has been resized or made visible.
      */
     _onIronResize: function() {
+      var slider = this;
 
       //debounce resize events
       if (slider.debounce) {
         slider.debounce(
           'slider_resize', function() {
-            console.log('resize');
+            var handleWidth  = this.range ? 2 : 22;
+            this.offsetForHandleWidth = this._calcOffsetWidth(handleWidth);
             if(this.range) {
               this._updateHandle(this.$.startHandle, this.value);
               this._updateHandle(this.$.endHandle, this.endValue);
@@ -447,9 +453,6 @@ Allow the user to select a value or range of values within a specified min and m
      *
      */
     _updateHandle: function(handle, value) {
-      // we need to recalc the container size every time in case its width has changed
-      var handleSize = this.range ? 2 : 22;
-      this.offsetForHandleWidth = this._calcOffsetWidth(handleSize);
 
       // Determine new x position form value
       var newPos = this._translateValueToPosition(value);
